# lentel

./: .gitignore  PROTOCOL.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: recv.py  send.py
lentel/: __init__.py  chunker.py  cli.py  congestion.py  crypto.py  nat.py  rendezvous.py  session.py  transport.py  wire.py  wordlist.py
lentel/app/: __init__.py  __main__.py  dialogs.py  icon.py  runner.py  state.py  tray.py
lentel/server/: __init__.py  coordinator.py  relay.py
packaging/: README.md
packaging/macos/: build.sh  setup.py
packaging/windows/: build.bat  build.ps1  lentel-tray.spec
tests/: test_e2e.py  test_wire.py
